added checkout page

--- a/html.html/pages/checkout.html
+++ b/html.html/pages/checkout.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Rosario Cafe Takeaways</title>
-  <link rel="stylesheet" href="../css/style.css">
+  <title>Coffees Msnu</title>
+  <link rel="stylesheet" href="../../css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +14,8 @@
 <body>
 
 <div id="topnav">
-  <a href="../index.html">
-      <img class="logo" src="images/logowhitetransp.png" alt="logo" >
+    <a href="../index.html">
+      <img class="logo" src="../Images/logowhitetransp.png" alt="logo" >
       </a>
       
     
@@ -30,38 +30,16 @@
       <a href="javascript:void(0);" class="icon" onclick="openMenu()">
           <i class="fa-solid fa-bars"></i></a>
 
-      <a href="../html.html/pages/check-out.html" class="bag_icon"><i class="fa-solid fa-bag-shopping"></i></a>
+      <a href="#cart" class="bag_icon"><i class="fa-solid fa-bag-shopping"></i></a>
 
   </div>
    
-<div id="bc">Home</div>  
-
-<div class="container"> 
-  
-  <div>
-    <a class="categories" href="../html.html/pages/coffees.html">
-      <h2 class="categoryTitle">Coffees</h2>
-      <img src="images/coffee_cat.jpg" alt="coffe menu">
-    </a>
-  </div>
-
-  <div> 
-  <a class="categories" href="#empanadas">
-      <h2 class="categoryTitle">Empanadas</h2>
-      <img src="images/empanadas_cat.jpg" alt="empanadas menu">
-  </a>
-  </div>
-
-  <div>
-  <a class="categories" href="#deals">
-      <h2 class="categoryTitle">Deals</h2>
-      <img src="images/deals_cat.jpg" alt="coffe menu">
-  </a>
-  </div>
+<div id="bc">
+    <a href="../index.html">Home</a> > Check-out</div>  
 
 
-</div>
-<script src="../js/index.js"></script>
+
+<script src="../../js/index.js"></script>
 </body>
 
 
