--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -30,12 +30,11 @@
       <a href="javascript:void(0);" class="icon" onclick="openMenu()">
           <i class="fa-solid fa-bars"></i></a>
 
-      <a href="#cart" class="bag_icon"><i class="fa-solid fa-bag-shopping"></i></a>
+      <a href="../html.html/pages/check-out.html" class="bag_icon"><i class="fa-solid fa-bag-shopping"></i></a>
 
   </div>
    
 
-<!-- make it a link to homepage -->
 <div id="bc">
     <a href="../index.html">Home</a> > Coffees</div>  
 
@@ -55,7 +54,7 @@
         <div class="dropdown">
             <select name="milk" class="dropbtn">
                 <div class="dropdown-milk">
-                <option value="default" selected>Select Your Milk / Miraka</option>
+                <option value="default" selected>Select Your Milk <span class="wrap">Miraka</span></option>
                 <option value="normal">Normal</option>
                 <option value="light">Skimmed</option>
                 <option value="vegan">Soy</option>
@@ -70,9 +69,7 @@
         <button class="up" onClick='increment()'>+</button>
        
       </div>
-       <!-- <button class="down" onClick='decreaseCount(event, this)'>-</button>
-        <input type="text" value="0">
-        <button class="up" onClick='increaseCount(event, this)'>+</button> --> 
+
 
     <br>  
         <div><button class="add-to-cart">ADD</button></div>
