edited name from checkout to your_bag

--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Coffees Msnu</title>
+  <title>Coffees Menu</title>
   <link rel="stylesheet" href="../../css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,13 +30,12 @@
       <a href="javascript:void(0);" class="icon" onclick="openMenu()">
           <i class="fa-solid fa-bars"></i></a>
 
-      <a href="../html.html/pages/check-out.html" class="bag_icon"><i class="fa-solid fa-bag-shopping"></i></a>
+      <a href="./your_bag.html" class="bag_icon"><i class="fa-solid fa-bag-shopping"></i></a>
 
   </div>
    
 
-<div id="bc">
-    <a href="../index.html">Home</a> > Coffees</div>  
+<div id="bc"><a href="../index.html">Home</a> > Coffees</div>  
 
 <div class="coffee-card">   
         <img src="../Images/latte.jpg" alt="latte/rate">
