--- a/html.html/index.html
+++ b/html.html/index.html
@@ -30,7 +30,7 @@
       <a href="javascript:void(0);" class="icon" onclick="openMenu()">
           <i class="fa-solid fa-bars"></i></a>
 
-      <a href="../html.html/pages/check-out.html" class="bag_icon"><i class="fa-solid fa-bag-shopping"></i></a>
+      <a href="../html.html/pages/your_bag.html" class="bag_icon"><i class="fa-solid fa-bag-shopping"></i></a>
 
   </div>
    
