bag page update

--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -53,7 +53,7 @@
         <div class="dropdown">
             <select name="milk" class="dropbtn">
                 <div class="dropdown-milk">
-                <option value="default" selected>Select Your Milk <span class="wrap">Miraka</span></option>
+                <option value="default" selected>Select Your Milk <span>Miraka</span></option>
                 <option value="normal">Normal</option>
                 <option value="light">Skimmed</option>
                 <option value="vegan">Soy</option>
