subtotal word added to bag page

--- a/html.html/pages/your_bag.html
+++ b/html.html/pages/your_bag.html
@@ -59,8 +59,8 @@
       <button class="up-check" onClick='increment()'>+</button>
      
     </div>
- 
-    <div class="total-price">$4.50</div>
+    <div class="subtotal">Subtotal</div>
+    <div class="amount">$4.50</div>
   </div>
 
   </div>
