--- a/html.html/pages/your_bag.html
+++ b/html.html/pages/your_bag.html
@@ -51,14 +51,14 @@
       <h4>Regular, Normal</h4>
     </div>
 
-    <div class="delete-btn"><i class="fa-solid fa-trash"></i></div>
+   
  
-    <div class="counter-check">
-      <button class="down-check" onClick='decrement()'>-</button>
-      <h2 id="counting-check">1</h2>
-      <button class="up-check" onClick='increment()'>+</button>
-     
-    </div>
+      <div class="counter-check">
+        <button class="down" onClick='decrementCheck()'>-</button>
+        <h2 id="counting-check">1</h2>
+        <button class="up" onClick='incrementCheck()'>+</button>
+      </div>
+    <button class="delete-btn"><i class="fa-solid fa-trash"></i></button>
     <div class="subtotal">Subtotal</div>
     <div class="amount">$4.50</div>
   </div>
