--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -39,7 +39,7 @@
 
 <div class="content-section">
   <div class="coffee-card">   
-        <img src="../Images/latte.jpg" alt="latte">
+        <img src="../Images/latte copy.jpg" alt="latte">
         <h1>Latte<br>Rate</h1>
         <div class="dropdown">
             <select name="size" class="dropbtn">
@@ -49,29 +49,26 @@
                 <option value="Large">Large $5.00</option>
             </select>
         </div>
-     <br>
         <div class="dropdown">
             <select name="milk" class="dropbtn">
                 <div class="dropdown-milk">
-                <option value="default" selected>Select Your Milk <span>Miraka</span></option>
+                <option value="default" selected>Select Your Milk <span>/ Miraka</span></option>
                 <option value="normal">Normal</option>
                 <option value="light">Skimmed</option>
                 <option value="vegan">Soy</option>
                 </div>
               </select>
         </div>
-    
         <div class="counter">
           <button class="down" onClick='decrement()'>-</button>
           <h2 id="counting"></h2>
           <button class="up" onClick='increment()'>+</button>
        </div>
-      
         <button class="add-to-cart">ADD</button>
   </div>
 
   <div class="coffee-card">   
-    <img src="../Images/latte.jpg" alt="capuccino">
+    <img src="../Images/capuccino copy.jpg" alt="capuccino">
     <h1>Capuccino<br>Kaputino</h1>
     <div class="dropdown">
         <select name="size" class="dropbtn">
@@ -81,29 +78,23 @@
             <option value="Large">Large $5.00</option>
         </select>
     </div>
- <br>
     <div class="dropdown">
         <select name="milk" class="dropbtn">
             <div class="dropdown-milk">
-            <option value="default" selected>Select Your Milk <span>Miraka</span></option>
+            <option value="default" selected>Select Your Milk <span>/ Miraka</span></option>
             <option value="normal">Normal</option>
             <option value="light">Skimmed</option>
             <option value="vegan">Soy</option>
             </div>
           </select>
     </div>
-
     <div class="counter">
       <button class="down" onClick='decrement()'>-</button>
       <h2 id="counting">0</h2>
       <button class="up" onClick='increment()'>+</button>
    </div>
-
     <button class="add-to-cart">ADD</button>
-</div>
-  
-  
-
+  </div>
 </div>
 
 <script src="../../js/index.js"></script>
