--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -38,6 +38,7 @@
 <div id="bc"><a href="../index.html">Home</a> > Coffees</div>  
 
 <div class="content-section">
+  <!-- item 1 -->
   <div class="coffee-card">   
         <img src="../Images/latte copy.jpg" alt="latte">
         <h1>Latte<br>Rate</h1>
@@ -66,7 +67,7 @@
        </div>
         <button class="add-to-cart">ADD</button>
   </div>
-
+<!-- item 2 -->
   <div class="coffee-card">   
     <img src="../Images/capuccino copy.jpg" alt="capuccino">
     <h1>Capuccino<br>Kaputino</h1>
@@ -95,9 +96,101 @@
    </div>
     <button class="add-to-cart">ADD</button>
   </div>
+
+  <!-- item 3 -->
   <div class="coffee-card">   
-    <img src="../Images/capuccino copy.jpg" alt="capuccino">
+    <img src="../Images/mocha.jpg" alt="mocha">
     <h1>Mocha<br>Moka</h1>
+    <div class="dropdown">
+        <select name="size" class="dropbtn">
+            <option value="default" selected>Select Your Size <br>/ Rahi</option>
+            <option value="small">Small $4.00</option>
+            <option value="Regular">Regular $4.50</option>
+            <option value="Large">Large $5.00</option>
+        </select>
+    </div>
+    <div class="dropdown">
+        <select name="milk" class="dropbtn">
+            <div class="dropdown-milk">
+            <option value="default" selected>Select Your Milk <span>/ Miraka</span></option>
+            <option value="normal">Normal</option>
+            <option value="light">Skimmed</option>
+            <option value="vegan">Soy</option>
+            </div>
+          </select>
+    </div>
+    <div class="counter">
+      <button class="down" onClick='decrement()'>-</button>
+      <h2 id="counting">0</h2>
+      <button class="up" onClick='increment()'>+</button>
+   </div>
+    <button class="add-to-cart">ADD</button>
+  </div>
+
+  <!-- item 4 -->
+  <div class="coffee-card">   
+    <img src="../Images/espresso.jpg" alt="espresso">
+    <h1>Espresso<br>Kawhe tere</h1>
+    <div class="dropdown">
+        <select name="size" class="dropbtn">
+            <option value="default" selected>Select Your Size <br>/ Rahi</option>
+            <option value="small">Small $4.00</option>
+            <option value="Regular">Regular $4.50</option>
+            <option value="Large">Large $5.00</option>
+        </select>
+    </div>
+    <div class="dropdown">
+        <select name="milk" class="dropbtn" disabled>
+            <div class="dropdown-milk">
+            <option value="default" selected>Select Your Milk <span>/ Miraka</span></option>
+            <option value="normal">Normal</option>
+            <option value="light">Skimmed</option>
+            <option value="vegan">Soy</option>
+            </div>
+          </select>
+    </div>
+    <div class="counter">
+      <button class="down" onClick='decrement()'>-</button>
+      <h2 id="counting">0</h2>
+      <button class="up" onClick='increment()'>+</button>
+   </div>
+    <button class="add-to-cart">ADD</button>
+  </div>
+
+  <!-- item 5 -->
+  <div class="coffee-card">   
+    <img src="../Images/tea.jpg" alt="tea">
+    <h1>Tea<br>Tī</h1>
+    <div class="dropdown">
+        <select name="size" class="dropbtn">
+            <option value="default" selected>Select Your Size <br>/ Rahi</option>
+            <option value="small">Small $4.00</option>
+            <option value="Regular">Regular $4.50</option>
+            <option value="Large">Large $5.00</option>
+        </select>
+    </div>
+    <div class="dropdown">
+        <select name="milk" class="dropbtn">
+            <div class="dropdown-milk">
+            <option value="default" selected>Select Your Milk <span>/ Miraka</span></option>
+            <option value="normal">Normal</option>
+            <option value="light">Skimmed</option>
+            <option value="vegan">Soy</option>
+            </div>
+          </select>
+    </div>
+    <div class="counter">
+      <button class="down" onClick='decrement()'>-</button>
+      <h2 id="counting">0</h2>
+      <button class="up" onClick='increment()'>+</button>
+   </div>
+    <button class="add-to-cart">ADD</button>
+  </div>
+
+  <!-- item 6 -->
+  <div class="coffee-card">   
+    <img src="../Images/chai latte.jpg" alt="chai latte">
+    <h1>Chai Latte<br>Kikini rāte</h1>
     <div class="dropdown">
         <select name="size" class="dropbtn">
             <option value="default" selected>Select Your Size <br>/ Rahi</option>
