updated images in coffees page

--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -69,8 +69,8 @@
   </div>
 <!-- item 2 -->
   <div class="coffee-card">   
-    <img src="../Images/capuccino copy.jpg" alt="capuccino">
-    <h1>Capuccino<br>Kaputino</h1>
+    <img src="../Images/cappuccino.jpg" alt="cappuccino">
+    <h1>Cappuccino<br>Kaputino</h1>
     <div class="dropdown">
         <select name="size" class="dropbtn">
             <option value="default" selected>Select Your Size <br>/ Rahi</option>
