styled checout btn My bag page

--- a/html.html/pages/your_bag.html
+++ b/html.html/pages/your_bag.html
@@ -96,11 +96,12 @@
       </div>
       <div class="terms"> 
         <input type="checkbox" id="terms-conds" name="accept" value="terms">
-        <label for="t&cs">Agree to our T&Cs</label>
+        <label for="t&cs">Agree to our T&C's</label>
+        <div>
+          <Button class="check-out-btn"><a href="#check-out-page">CHECK OUT</a></Button>
+        </div>
       </div>
-      <div>
-        <Button class="check-out-btn"><a href="#check-out-page">CHECK OUT</a></Button>
-      </div>
+    
       
   </div>
 
