added empanadas page
removed unused images

--- a/html.html/index.html
+++ b/html.html/index.html
@@ -21,7 +21,7 @@
     
      <div id="menuLinks">
         <a href="../html.html/pages/coffees.html">Coffees</a>
-        <a href="#empanadas">Empanadas</a>
+        <a href="../html.html/pages/empanadas.html">Empanadas</a>
         <a href="#deals">Deals</a>
         <a href="#contact">Contact Us</a>
         <a href="#about">About Us</a>
@@ -46,7 +46,7 @@
   </div>
 
   <div> 
-  <a class="categories" href="#empanadas">
+  <a class="categories" href="../html.html/pages/empanadas.html">
       <h2 class="categoryTitle">Empanadas</h2>
       <img src="images/empanadas_cat.jpg" alt="empanadas menu">
   </a>
