--- a/html.html/pages/your_bag.html
+++ b/html.html/pages/your_bag.html
@@ -21,7 +21,7 @@
     
      <div id="menuLinks">
         <a href="./coffees.html">Coffees</a>
-        <a href="#empanadas">Empanadas</a>
+        <a href="./empanadas.html">Empanadas</a>
         <a href="#deals">Deals</a>
         <a href="#contact">Contact Us</a>
         <a href="#about">About Us</a>
