--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -20,8 +20,8 @@
       
     
      <div id="menuLinks">
-        <a href="#coffees">Coffees</a>
-        <a href="#empanadas">Empanadas</a>
+        <a href="../pages/coffees.html">Coffees</a>
+        <a href="../pages/empanadas.html">Empanadas</a>
         <a href="#deals">Deals</a>
         <a href="#contact">Contact Us</a>
         <a href="#about">About Us</a>
@@ -39,7 +39,7 @@
 
 <div class="content-section">
   <!-- item 1 -->
-  <div class="coffee-card">   
+  <div class="product-card">   
         <img src="../Images/latte copy.jpg" alt="latte">
         <h1>Latte<br>Rate</h1>
         <div class="dropdown">
@@ -68,7 +68,7 @@
         <button class="add-to-cart">ADD</button>
   </div>
 <!-- item 2 -->
-  <div class="coffee-card">   
+  <div class="product-card">   
     <img src="../Images/cappuccino.jpg" alt="cappuccino">
     <h1>Cappuccino<br>Kaputino</h1>
     <div class="dropdown">
@@ -98,8 +98,8 @@
   </div>
 
   <!-- item 3 -->
-  <div class="coffee-card">   
-    <img src="../Images/mocha.jpg" alt="mocha">
+  <div class="product-card">
+    <img src="../Images/mocha2.jpg" alt="mocha">
     <h1>Mocha<br>Moka</h1>
     <div class="dropdown">
         <select name="size" class="dropbtn">
@@ -128,7 +128,7 @@
   </div>
 
   <!-- item 4 -->
-  <div class="coffee-card">   
+  <div class="product-card">   
     <img src="../Images/espresso.jpg" alt="espresso">
     <h1>Espresso<br>Kawhe tere</h1>
     <div class="dropdown">
@@ -158,7 +158,7 @@
   </div>
 
   <!-- item 5 -->
-  <div class="coffee-card">   
+  <div class="product-card">   
     <img src="../Images/tea.jpg" alt="tea">
     <h1>Tea<br>Tī</h1>
     <div class="dropdown">
@@ -188,7 +188,7 @@
   </div>
 
   <!-- item 6 -->
-  <div class="coffee-card">   
+  <div class="product-card">   
     <img src="../Images/chai latte.jpg" alt="chai latte">
     <h1>Chai Latte<br>Kikini rāte</h1>
     <div class="dropdown">
