--- a/html.html/index.html
+++ b/html.html/index.html
@@ -22,9 +22,9 @@
      <div id="menuLinks">
         <a href="../html.html/pages/coffees.html">Coffees</a>
         <a href="../html.html/pages/empanadas.html">Empanadas</a>
-        <a href="#deals">Deals</a>
+        <a href="../html.html/pages/deals.html">Deals</a>
         <a href="#contact">Contact Us</a>
-        <a href="#about">About Us</a>
+        <a href="..//html.html/pages/about.html">About Us</a>
      </div>
 
       <a href="javascript:void(0);" class="icon" onclick="openMenu()">
