--- a/html.html/pages/your_bag.html
+++ b/html.html/pages/your_bag.html
@@ -22,9 +22,9 @@
      <div id="menuLinks">
         <a href="./coffees.html">Coffees</a>
         <a href="./empanadas.html">Empanadas</a>
-        <a href="#deals">Deals</a>
+        <a href="./deals.html">Deals</a>
         <a href="#contact">Contact Us</a>
-        <a href="#about">About Us</a>
+        <a href="./about.html">About Us</a>
      </div>
 
       <a href="javascript:void(0);" class="icon" onclick="openMenu()">
