media queries for deals page

--- a/html.html/pages/deals.html
+++ b/html.html/pages/deals.html
@@ -38,13 +38,12 @@
 <div id="bc"><a href="../index.html">Home</a> > Deals</div>  
 
 <div class="promo-section">
-  <!-- item 1 -->
   <div class="promo-card">   
     <img src="../Images/promo 1.jpg" alt="promo page">
     
     <div class="heading">
         <select name="deals" class="choose-deal-btn">
-            <option value="default" selected>Select your deal / Toha</option>
+            <option value="default" selected>Select your Deal / Toha</option>
             <option value="promo1">6 Empanadas $22</option>
             <option value="promo2">8 Empanadas $30</option>
             <option value="Promo3">12 Empanadas $44</option>
@@ -87,8 +86,8 @@
             <button class="add-to-cart">ADD</button>
     </div>
   
+    </div>
 </div>
-
 <script src="../../js/index.js"></script>
 </body>
 
