about us and check out page addition

--- a/html.html/pages/about.html
+++ b/html.html/pages/about.html
@@ -37,7 +37,14 @@
 
 <div id="bc"><a href="../index.html">Home</a> > About Us</div>  
 
+<div class="about-section">
+    <div class="first-p">
+        <p>Rosario Cafe is the first typical Argentinian cafe located in the heart of Christchurch CBD. We make our own empanadas range baked in-store daily!</p>
+        <img src="../Images/venue.jpeg" alt="venue">
+    </div>
+    
 
+</div>
 
 <script src="../../js/index.js"></script>
 </body>
