--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -65,9 +65,9 @@
           <h2 id="counting"></h2>
           <button class="up" onClick='increment()'>+</button>
        </div>
-        <button class="add-to-cart">ADD</button>
+        <button class="add-to-cart"><a href="./your_bag.html">ADD</a></button>
   </div>
-<!-- item 2 -->
+  <!-- item 2 -->
   <div class="product-card">   
     <img src="../Images/cappuccino.jpg" alt="cappuccino">
     <h1>Cappuccino<br>Kaputino</h1>
