about us page finished

--- a/html.html/pages/about.html
+++ b/html.html/pages/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Deals</title>
+  <title>About Us</title>
   <link rel="stylesheet" href="../../css/style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,12 +38,23 @@
 <div id="bc"><a href="../index.html">Home</a> > About Us</div>  
 
 <div class="about-section">
-    <div class="first-p">
+    <div class="text">
         <p>Rosario Cafe is the first typical Argentinian cafe located in the heart of Christchurch CBD. We make our own empanadas range baked in-store daily!</p>
-        <img src="../Images/venue.jpeg" alt="venue">
     </div>
-    
-
+    <div class="image-section">   
+        <img src="../Images/venue2.jpg" alt="venue">
+        <h1>COME GET A TASTE OF OUR CULTURE!</h1>
+    </div>
+    <div class="text">
+        <p>Empanadas are hand-sized savory pies that can be found all over South America.</p>
+    </div>
+    <div class="image-section">
+        <img src="../Images/flag.jpg" alt="argentinian flag">
+        <p>In Argentina, every province has its own variety. All follow the same basic culinary guideline — a soft pocket of dough that is stuffed with a scrumptious, savory filling.</p>
+    </div>
+    <div class="text">   
+        <h2>Open <span>Mon - Fri: 7:00 AM – 3:00 PM</span>  in Chch’s <span>Riverside Market</span></h2>
+    </div>
 </div>
 
 <script src="../../js/index.js"></script>
