contact us page

--- a/html.html/pages/about.html
+++ b/html.html/pages/about.html
@@ -23,7 +23,7 @@
         <a href="../pages/coffees.html">Coffees</a>
         <a href="../pages/empanadas.html">Empanadas</a>
         <a href="../pages/deals.html">Deals</a>
-        <a href="#contact">Contact Us</a>
+        <a href="../pages/contact.html">Contact Us</a>
         <a href="../pages/about.html">About Us</a>
      </div>
 
