--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -23,7 +23,7 @@
         <a href="../pages/coffees.html">Coffees</a>
         <a href="../pages/empanadas.html">Empanadas</a>
         <a href="../pages/deals.html">Deals</a>
-        <a href="#contact">Contact Us</a>
+        <a href="../pages/contact.html">Contact Us</a>
         <a href="../pages/about.html">About Us</a>
      </div>
 
@@ -65,7 +65,7 @@
           <h2 id="counting"></h2>
           <button class="up" onClick='increment()'>+</button>
        </div>
-        <button class="add-to-cart"><a href="./your_bag.html">ADD</a></button>
+        <button class="primary-btn"><a href="./your_bag.html">ADD</a></button>
   </div>
   <!-- item 2 -->
   <div class="product-card">   
@@ -94,7 +94,7 @@
       <h2 id="counting">0</h2>
       <button class="up" onClick='increment()'>+</button>
    </div>
-    <button class="add-to-cart">ADD</button>
+    <button class="primary-btn">ADD</button>
   </div>
 
   <!-- item 3 -->
@@ -124,7 +124,7 @@
       <h2 id="counting">0</h2>
       <button class="up" onClick='increment()'>+</button>
    </div>
-    <button class="add-to-cart">ADD</button>
+    <button class="primary-btn">ADD</button>
   </div>
 
   <!-- item 4 -->
@@ -154,7 +154,7 @@
       <h2 id="counting">0</h2>
       <button class="up" onClick='increment()'>+</button>
    </div>
-    <button class="add-to-cart">ADD</button>
+    <button class="primary-btn">ADD</button>
   </div>
 
   <!-- item 5 -->
@@ -184,7 +184,7 @@
       <h2 id="counting">0</h2>
       <button class="up" onClick='increment()'>+</button>
    </div>
-    <button class="add-to-cart">ADD</button>
+    <button class="primary-btn">ADD</button>
   </div>
 
   <!-- item 6 -->
@@ -214,7 +214,7 @@
       <h2 id="counting">0</h2>
       <button class="up" onClick='increment()'>+</button>
    </div>
-    <button class="add-to-cart">ADD</button>
+    <button class="primary-btn">ADD</button>
   </div>
 </div>
 
