--- a/html.html/pages/deals.html
+++ b/html.html/pages/deals.html
@@ -23,7 +23,7 @@
         <a href="../pages/coffees.html">Coffees</a>
         <a href="../pages/empanadas.html">Empanadas</a>
         <a href="../pages/deals.html">Deals</a>
-        <a href="#contact">Contact Us</a>
+        <a href="../pages/contact.html">Contact Us</a>
         <a href="../pages/about.html">About Us</a>
      </div>
 
@@ -83,7 +83,7 @@
                 <button class="up" onClick='increment()'>+</button>
             </div>
         </div>
-            <button class="add-to-cart">ADD</button>
+            <button class="primary-btn">ADD</button>
     </div>
   
     </div>
