--- a/html.html/pages/your_bag.html
+++ b/html.html/pages/your_bag.html
@@ -98,7 +98,7 @@
         <input type="checkbox" id="terms-conds" name="accept" value="terms">
         <label for="t&cs">Agree to our T&C's</label>
         <div>
-          <Button class="check-out-btn"><a href="./check_out.html">CHECK OUT</a></Button>
+          <Button class="check-out-btn"><a href="./checkout.html">CHECK OUT</a></Button>
         </div>
       </div>
   </div>
