check-out page @media finished

--- a/html.html/pages/check_out.html
+++ b/html.html/pages/check_out.html
@@ -38,6 +38,7 @@
 <div id="bc"><a href="../index.html">Home</a> > Check Out</div>  
 
 <div class="checkout-section">
+    <div class="container-checkout">
         <div class="order-check">
             <label class="time" for="time-select">Pick-up time in</label>
             <select name="time" class="dropbtn">
@@ -71,7 +72,7 @@
                     </div>
                     <div class="form-group">
                         <label>Expiry Date*</label>
-                        <input  class="form-control" type="date">
+                        <input   type="date">
                     </div>
                  </div>
                 <div class="form-group">
@@ -86,6 +87,8 @@
                     <Button class="primary-btn"><a href="./checkout.html">CONFIRM</a></Button>
                 </div>
             </form>
+        </div>
+    </div>
 </div>
 <script src="../../js/index.js"></script>
 </body>
