--- a/html.html/pages/contact.html
+++ b/html.html/pages/contact.html
@@ -38,7 +38,7 @@
 <div id="bc"><a href="../index.html">Home</a> > Contact Us</div>  
 
 <div class="contact-section">
-    <div class="container">
+    <div class="container-contact">
         <div class="wording">
             <p>Come see us in Riverside Market, chch CBD</p>
                 <h2>
