--- a/html.html/pages/contact.html
+++ b/html.html/pages/contact.html
@@ -77,10 +77,12 @@
             <p>Remember to folow us on our social media <br>
                 for news and latest deals                
             </p>
-            <a href="#facebook" class="sm-icons"> <i class="fa-brands fa-facebook"></i>
-            </a>
-            <a href="#instagram" class="sm-icons"> <i class="fa-brands fa-instagram"></i>
-            </a>
+            <div class="sm-icons">
+                <a href="#facebook"><i class="fa-brands fa-facebook"></i>
+                </a>
+                <a href="#instagram"><i class="fa-brands fa-instagram"></i>
+                </a>
+            </div>
         </div>
     </div>
    
