added confirmation page

--- a/html.html/pages/check_out.html
+++ b/html.html/pages/check_out.html
@@ -84,7 +84,7 @@
                     <label for="GST">Tick to receive a GST receipt</label>
                 </div>
                 <div class="confirmation">
-                    <Button class="primary-btn"><a href="./checkout.html">CONFIRM</a></Button>
+                    <Button class="primary-btn"><a href="./confirmation_page.html">CONFIRM</a></Button>
                 </div>
             </form>
         </div>
