--- a/html.html/pages/coffees.html
+++ b/html.html/pages/coffees.html
@@ -90,9 +90,9 @@
           </select>
     </div>
     <div class="counter">
-      <button class="down" onClick='decrement()'>-</button>
+      <button class="down">-</button>
       <h2 id="counting">0</h2>
-      <button class="up" onClick='increment()'>+</button>
+      <button class="up">+</button>
    </div>
     <button class="primary-btn">ADD</button>
   </div>
@@ -120,9 +120,9 @@
           </select>
     </div>
     <div class="counter">
-      <button class="down" onClick='decrement()'>-</button>
+      <button class="down">-</button>
       <h2 id="counting">0</h2>
-      <button class="up" onClick='increment()'>+</button>
+      <button class="up">+</button>
    </div>
     <button class="primary-btn">ADD</button>
   </div>
@@ -150,9 +150,9 @@
           </select>
     </div>
     <div class="counter">
-      <button class="down" onClick='decrement()'>-</button>
+      <button class="down">-</button>
       <h2 id="counting">0</h2>
-      <button class="up" onClick='increment()'>+</button>
+      <button class="up">+</button>
    </div>
     <button class="primary-btn">ADD</button>
   </div>
@@ -180,9 +180,9 @@
           </select>
     </div>
     <div class="counter">
-      <button class="down" onClick='decrement()'>-</button>
+      <button class="down">-</button>
       <h2 id="counting">0</h2>
-      <button class="up" onClick='increment()'>+</button>
+      <button class="up">+</button>
    </div>
     <button class="primary-btn">ADD</button>
   </div>
@@ -210,9 +210,9 @@
           </select>
     </div>
     <div class="counter">
-      <button class="down" onClick='decrement()'>-</button>
+      <button class="down">-</button>
       <h2 id="counting">0</h2>
-      <button class="up" onClick='increment()'>+</button>
+      <button class="up">+</button>
    </div>
     <button class="primary-btn">ADD</button>
   </div>
