--- a/html.html/pages/empanadas.html
+++ b/html.html/pages/empanadas.html
@@ -40,14 +40,14 @@
 <div class="content-section">
     <!-- item 1 -->
     <div class="product-card">   
-        <img src="../Images/beef.jpeg" alt="beef empandas">
+        <img src="../Images/beef.jpg" alt="beef empandas">
         <h1>Beef Empanadas</h1>
         <p>Argenitinian little meat pies full of flavour</p>
         <h2>Price: $4 e/a</h2>
         <div class="counter">
-            <button class="down" onClick='decrement()'>-</button>
+            <button class="down">-</button>
             <h2 id="counting">0</h2>
-            <button class="up" onClick='increment()'>+</button>
+            <button class="up">+</button>
          </div>
           <button class="primary-btn">ADD</button>
     </div>
@@ -59,9 +59,9 @@
         <p>Pies filled with lots of cheese and ham</p>
         <h2>Price: $4 e/a</h2>
         <div class="counter">
-            <button class="down" onClick='decrement()'>-</button>
+            <button class="down">-</button>
             <h2 id="counting">0</h2>
-            <button class="up" onClick='increment()'>+</button>
+            <button class="up">+</button>
         </div>
         <button class="primary-btn">ADD</button>
     </div>
@@ -69,13 +69,13 @@
         <!-- item 3 -->
     <div class="product-card">   
         <img src="../Images/vegetarian.jpeg" alt="vegetarian empanadas">
-        <h1>veggie Empanadas</h1>
+        <h1>Veggie Empanadas</h1>
         <p>Don’t break your diet with this veggie option</p>
         <h2>Price: $4 e/a</h2>
         <div class="counter">
-            <button class="down" onClick='decrement()'>-</button>
+            <button class="down">-</button>
             <h2 id="counting">0</h2>
-            <button class="up" onClick='increment()'>+</button>
+            <button class="up">+</button>
         </div>
         <button class="primary-btn">ADD</button>
     </div>
@@ -88,9 +88,9 @@
         <p>For our lactose intolerant and veggie friends</p>
         <h2>Price: $4 e/a</h2>
         <div class="counter">
-            <button class="down" onClick='decrement()'>-</button>
+            <button class="down">-</button>
             <h2 id="counting">0</h2>
-            <button class="up" onClick='increment()'>+</button>
+            <button class="up">+</button>
         </div>
         <button class="primary-btn">ADD</button>
     </div>
