--- a/html.html/pages/deals.html
+++ b/html.html/pages/deals.html
@@ -38,54 +38,53 @@
 <div id="bc"><a href="../index.html">Home</a> > Deals</div>  
 
 <div class="promo-section">
-  <div class="promo-card">   
-    <img src="../Images/promo 1.jpg" alt="promo page">
+    <div class="promo-card">   
+        <img src="../Images/promo 1.jpg" alt="promo page">
     
-    <div class="heading">
-        <select name="deals" class="choose-deal-btn">
-            <option value="default" selected>Select your Deal / Toha</option>
-            <option value="promo1">6 Empanadas $22</option>
-            <option value="promo2">8 Empanadas $30</option>
-            <option value="Promo3">12 Empanadas $44</option>
-        </select>
-        <div class="dropdown-flavor">
-            <select name="flavor" class="dropbtn-deals">
-                <option value="default" selected>Choose your Filling / Whakakī</option>
-                <option value="beef">Beef / Mīti kau</option>
-                <option value="Ham&cheese">Ham & Cheese / Wāmu & Tīhi</option>
-                <option value="Veggie">Veggie / Kaiwhenua</option>
+        <div class="heading">
+            <select name="deals" class="choose-deal-btn">
+                <option value="default" selected>Select your Deal / Toha</option>
+                <option value="promo1">6 Empanadas $22</option>
+                <option value="promo2">8 Empanadas $30</option>
+                <option value="Promo3">12 Empanadas $44</option>
             </select>
-            <div class="counter-deals">
-                <button class="down" onClick='decrement()'>-</button>
-                <h2 id="counting"></h2>
-                <button class="up" onClick='increment()'>+</button>
+            <div class="dropdown-flavor">
+                <select name="flavor" class="dropbtn-deals">
+                    <option value="default" selected>Choose your Filling / Whakakī</option>
+                    <option value="beef">Beef / Mīti kau</option>
+                    <option value="Ham&cheese">Ham & Cheese / Wāmu & Tīhi</option>
+                    <option value="Veggie">Veggie / Kaiwhenua</option>
+                </select>
+                <div class="counter-deals">
+                    <button class="down">-</button>
+                    <h2 id="counting"></h2>
+                    <button class="up">+</button>
+                    </div>
+                <select name="flavor" class="dropbtn-deals">
+                    <option value="default" selected>Choose your Filling / Whakakī</option>
+                    <option value="beef">Beef / Mīti kau</option>
+                    <option value="Ham&cheese">Ham & Cheese / Wāmu & Tīhi</option>
+                    <option value="Veggie">Veggie / Kaiwhenua</option>
+                </select>
+                <div class="counter-deals">
+                    <button class="down">-</button>
+                    <h2 id="counting">0</h2>
+                    <button class="up">+</button>
                 </div>
-            <select name="flavor" class="dropbtn-deals">
-                <option value="default" selected>Choose your Filling / Whakakī</option>
-                <option value="beef">Beef / Mīti kau</option>
-                <option value="Ham&cheese">Ham & Cheese / Wāmu & Tīhi</option>
-                <option value="Veggie">Veggie / Kaiwhenua</option>
-            </select>
-             <div class="counter-deals">
-                <button class="down" onClick='decrement()'>-</button>
-                <h2 id="counting">0</h2>
-                <button class="up" onClick='increment()'>+</button>
+                <select name="flavor" class="dropbtn-deals">
+                    <option value="default" selected>Choose your Filling / Whakakī</option>
+                    <option value="beef">Beef / Mīti kau</option>
+                    <option value="Ham&cheese">Ham & Cheese / Wāmu & Tīhi</option>
+                    <option value="Veggie">Veggie / Kaiwhenua</option>
+                </select>
+                <div class="counter-deals">
+                    <button class="down">-</button>
+                    <h2 id="counting">0</h2>
+                    <button class="up">+</button>
+                </div>
             </div>
-            <select name="flavor" class="dropbtn-deals">
-                <option value="default" selected>Choose your Filling / Whakakī</option>
-                <option value="beef">Beef / Mīti kau</option>
-                <option value="Ham&cheese">Ham & Cheese / Wāmu & Tīhi</option>
-                <option value="Veggie">Veggie / Kaiwhenua</option>
-            </select>
-            <div class="counter-deals">
-                <button class="down" onClick='decrement()'>-</button>
-                <h2 id="counting">0</h2>
-                <button class="up" onClick='increment()'>+</button>
-            </div>
+                <button class="primary-btn">ADD</button>
         </div>
-            <button class="primary-btn">ADD</button>
-    </div>
-  
     </div>
 </div>
 <script src="../../js/index.js"></script>
