--- a/html.html/pages/your_bag.html
+++ b/html.html/pages/your_bag.html
@@ -26,12 +26,9 @@
         <a href="../pages/contact.html">Contact Us</a>
         <a href="../pages/about.html">About Us</a>
      </div>
-
       <a href="javascript:void(0);" class="icon" onclick="openMenu()">
           <i class="fa-solid fa-bars"></i></a>
-
       <a href="./your_bag.html" class="bag_icon"><i class="fa-solid fa-bag-shopping"></i></a>
-
   </div>
    
 <div id="bc"><a href="../index.html">Home</a> > Your Bag</div>  
@@ -47,9 +44,9 @@
           <h4>Regular, Normal</h4>
           <div class="amend-qty">
             <div class="counter-check">
-              <button class="down" onClick='decrementCheck()'>-</button>
+              <button class="down">-</button>
               <h2 id="counting-check">1</h2>
-              <button class="up" onClick='incrementCheck()'>+</button>
+              <button class="up">+</button>
             </div>
             <button class="delete-btn" onClick-=><i class="fa-solid fa-trash"></i></button>
           </div>
