fixed index link to deals page

--- a/html.html/index.html
+++ b/html.html/index.html
@@ -53,7 +53,7 @@
   </div>
 
   <div>
-  <a class="categories" href="#deals">
+  <a class="categories" href="./pages/deals.html">
       <h2 class="categoryTitle">Deals</h2>
       <img src="images/deals_cat.jpg" alt="coffe menu">
   </a>
